<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_reading_sharenewsblur"
        android:icon="@drawable/newsblur_share"
        android:showAsAction="never"
        android:title="@string/menu_sharenewsblur"/>
    <item
        android:id="@+id/menu_reading_original"
        android:icon="@drawable/website"
        android:showAsAction="never"
        android:title="@string/menu_original"/>
    <item
        android:id="@+id/menu_shared"
        android:icon="@drawable/share"
        android:showAsAction="never"
        android:title="@string/menu_share"/>
    
    <item
        android:id="@+id/menu_textsize"
        android:showAsAction="never"
        android:title="@string/menu_textsize"/>
        
    <item
        android:id="@+id/menu_reading_save"
        android:showAsAction="never"
        android:title="@string/menu_save_story"/>

    <item
        android:id="@+id/menu_reading_markunread"
        android:showAsAction="never"
        android:title="@string/menu_mark_unread"/>

</menu>
